prettied up and corrected project page

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <a href="about-blahb"></a><h1>About blahb</h1>
+        <a id="about-blahb"></a><h1>About blahb</h1>
 
 <p>The Better Looking Atlas of the Human Brain (Blahb) is a finely detailed anatomical segmentation of the <a href="http://www.bic.mni.mcgill.ca/ServicesAtlases/Colin27Highres">high-resolution version of the Colin 27 average brain</a>. It is intended to serve as a detailed, comprehensive neuroanatomical reference suitable specifically for generating appealing visualisations such as those featured by <a href="http://neuroanatomist.org">neuroanatomist</a>.</p>
 
@@ -42,11 +42,11 @@
 
 <p>Tools have been created for automatically processing set of layers exported from Seg3D2 and producing a single multilayer image and an accompanying <em>labels.txt</em> file (see <a href="#using-blahb"><em>Using blahb</em></a> for more details). If you have any queries which are not addressed in this documentation, feel free to email me: <em>(Nat Noordanus)  n **at</em>* natn.me*</p>
 
-<a href="blahb-version"></a><h1>About version 0.1.0</h1>
+<a id="blahb-version"></a><h1>About version 0.1.0</h1>
 
 <p>This is the first release of blahb. To summarise, it includes  a nearly complete segmentation of the gyri of the right hemisphere, and the left temporal lobe, as well as the lobes of the left hemisphere. It also includes segmentations of many major subcortical structures, including the cerebellum, brainstem, midbrain, basal ganglia, hypothalamus and right thalamus. A complete list of structures can be seen in the <em><a href="https://raw.github.com/gnatters/blahb/releases/0.1.0/blahb_labels_0_1_0.txt">labels.txt</a></em> available via the <a href="#getting-blahb"><em>Getting blahb</em></a> section.</p>
 
-<a href="getting-blahb"></a><h1>Getting blahb</h1>
+<a id="getting-blahb"></a><h1>Getting blahb</h1>
 
 <p>Balhb is be available in three forms:</p>
 
@@ -59,7 +59,7 @@
 <a href="https://raw.github.com/gnatters/blahb/releases/0.1.0/blahb_0_1_0.nii.gz">a single NIfTI file</a> and an accompanying <a href="https://raw.github.com/gnatters/blahb/releases/0.1.0/blahb_labels_0_1_0.txt">labels</a> file.</li>
 </ul>
 
-<a href="using-blahb"></a><h1>Using blahb</h1>
+<a id="using-blahb"></a><h1>Using blahb</h1>
 
 <p>Blahb is specifically intended for visualisation purposes, however it may also be useful in other contexts.</p>
 
@@ -80,7 +80,7 @@
 
 <p>For simply viewing NIfTI files, <a href="http://ric.uthscsa.edu/mango/">Mango</a> or <a href="http://rsb.info.nih.gov/ij/">ImageJ</a>.</p>
 
-<a href="contributing-to-blahb"></a><h1>Contributing to blahb</h1>
+<a id="contributing-to-blahb"></a><h1>Contributing to blahb</h1>
 
 <p>Blahb is a work in progress and is far from finished. Your contributions are welcome, particularly in the form of</p>
 
@@ -92,17 +92,17 @@
 
 <p>Suggestions for larger contributions, collaborations or other ways to contribute are welcome via email.</p>
 
-<h1>Credits</h1>
+<a id="credits"></a><h1>Credits</h1>
 
 <p>balhb was is the creation of <a href="https://github.com/gnatters">Nat Noordanus</a> (project maintainer).
 Significant assistance with segmentation was given by Panos Dimitriou and <a href="https://github.com/lewishou">Lewis Hou</a> with help from an award from the <a href="http://www.ppls.ed.ac.uk/">PPLS</a> Teaching and Learning Initiative fund from The University of Edinburgh.</p>
 
-<a href="license"></a><h1>License</h1>
+<a id="license"></a><h1>License</h1>
 
 <p><a href="http://creativecommons.org/licenses/by-sa/3.0/deed.en"><img alt="Creative Commons Lience" src="http://i.creativecommons.org/l/by-sa/3.0/88x31.png"></a>
 The Better Looking Atlas of the Human Brain (Blahb) by Nat Noordanus <a href="#credits">et al</a>. is licensed under a <a href="http://creativecommons.org/licenses/by-sa/3.0/deed.en">Creative Commons Attribution-ShareAlike 3.0 Unported License</a>.</p>
 
-<a href="citing-blahb"></a><h1>Citing blahb</h1>
+<a id="citing-blahb"></a><h1>Citing blahb</h1>
 
 <p>If you wish to cite blahb you may use the following APA format:
 Noordanus, N. W., Dimitriou, P., Lewis, H. (2013). BLAHB: the Better Looking Atlas of the Human Brain (Version 0.1) [Digital Brain Atlas]. Available from <a href="https://github.com/gnatters/blahb">https://github.com/gnatters/blahb</a></p>
