optimised png images

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 <p>blahb is designed to be extended and adapted as required and community contributions are welcome. The design philosophy is that any spatial feature of the brain which can be meaningfully and neatly segmented within the source image, should be. Thus different levels of granularity or systems of parcellation may coexist (e.g. lobes, gyri, sulci, brodmann areas, functional areas etc).</p>
 
-<p>Tools have been created for automatically processing set of layers exported from Seg3D2 and producing a single multilayer image and an accompanying <em>labels.txt</em> file (see <a href="#using-blahb"><em>Using blahb</em></a> for more details). If you have any queries which are not addressed in this documentation, feel free to email me: <em>(Nat Noordanus)  n **at</em>* natn.me*</p>
+<p>Tools have been created for automatically processing set of layers exported from Seg3D2 and producing a single multilayer image and an accompanying <em>labels.txt</em> file (see <a href="#using-blahb"><em>Using blahb</em></a> for more details). If you have any queries which are not addressed in this documentation, feel free to email me: <em>(Nat Noordanus)  n <strong>at</strong> natn.me</em></p>
 
 <a id="blahb-version"></a><h1>About version 0.1.0</h1>
 
