corrected email formatting

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
 <p>Once the images have been converted to either .nii or .nii.gz and placed in a single directory, the <a href="https://gist.github.com/gnatters/5139065">mlv_merge.py</a> tool can be used to compile a single atlas image. This tool requires Python 2.7+ and relies upon the <a href="http://nipy.sourceforge.net/nibabel/">NiBabel package</a>. The tool takes a directory of single (or multi-) label NIfTI files and combines them into a single multilabel image, in which all the original labels are represented, and any overlaps between different labels are also represented as new labels. This image is then written as a single NIfTI file (called <em>merged_image.nii.gz</em> by default). It also produces a <em>labels.txt</em> file which contains a key, pairing each label value in the multilabel image with its name (derived from the name of the original label file or files). An example compiled atlas is available via the <a href="#getting-blahb"><strong>Getting blahb section</strong></a></p>
 
-<p>For simply viewing NIfTI files, <a href="http://ric.uthscsa.edu/mango/">Mango</a> or <a href="http://rsb.info.nih.gov/ij/">ImageJ</a>.</p>
+<p>For simply viewing NIfTI files, <a href="http://ric.uthscsa.edu/mango/">Mango</a> or <a href="http://rsb.info.nih.gov/ij/">ImageJ</a> are reconmended.</p>
 
 <a id="contributing-to-blahb"></a><h1>Contributing to blahb</h1>
 
