--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ The Better Looking Atlas of the Human Brain (Blahb) by Nat Noordanus <a href="#c
 <a id="citing-blahb"></a><h1>Citing blahb</h1>
 
 <p>If you wish to cite blahb you may use the following APA format:
-Noordanus, N. W., Dimitriou, P., Lewis, H. (2013). BLAHB: the Better Looking Atlas of the Human Brain (Version 0.1) [Digital Brain Atlas]. Available from <a href="https://github.com/gnatters/blahb">https://github.com/gnatters/blahb</a></p>
+Noordanus, N. W., Dimitriou, P., Hou, L. (2013). BLAHB: the Better Looking Atlas of the Human Brain (Version 0.1) [Digital Brain Atlas]. Available from <a href="https://github.com/gnatters/blahb">https://github.com/gnatters/blahb</a></p>
       </section>
     </div>
 
