--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ Noordanus, N. W., Dimitriou, P., Hou, L. (2013). BLAHB: the Better Looking Atlas
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Blahb maintained by <a href="https://github.com/gnatters">gnatters</a></p>
+        <p class="copyright">Blahb maintained by <a href="https://github.com/gnatters">Nat Noordanus</a></p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
