added link image

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
+        <img src="images/sample_image.png" class="link_image">
         <a id="about-blahb"></a><h1>About blahb</h1>
 
 <p>The Better Looking Atlas of the Human Brain (Blahb) is a finely detailed anatomical segmentation of the <a href="http://www.bic.mni.mcgill.ca/ServicesAtlases/Colin27Highres">high-resolution version of the Colin 27 average brain</a>. It is intended to serve as a detailed, comprehensive neuroanatomical reference suitable specifically for generating appealing visualisations such as those featured by <a href="http://neuroanatomist.org">neuroanatomist</a>.</p>
@@ -112,7 +113,7 @@ Noordanus, N. W., Dimitriou, P., Hou, L. (2013). BLAHB: the Better Looking Atlas
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Blahb maintained by <a href="https://github.com/gnatters">Nat Noordanus</a></p>
+        <p class="copyright">Blahb is maintained by <a href="https://github.com/gnatters">Nat Noordanus</a></p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
