--- a/index.html
+++ b/index.html
@@ -118,7 +118,19 @@ Noordanus, N. W., Dimitriou, P., Hou, L. (2013). BLAHB: the Better Looking Atlas
       </footer>
     </div>
 
-    
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-40359367-1']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>    
 
   </body>
 </html>
